<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView android:id="@+id/form4" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:singleLine="true"
                android:textSize="25dp"
                android:hint="@string/title_howmuch"
                android:maxLines="1"
                android:id="@+id/title_howmuch"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/free_price_text"
                android:id="@+id/checkbox_free"
                android:layout_weight="1" />

            <TextView
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="OR"
                android:layout_weight="1" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/flat_price_text"
                    android:id="@+id/radioButton_price"
                    android:layout_weight="1" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discounted_price_text"
                    android:id="@+id/radioButton_discount"
                    android:layout_weight="1" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="numberDecimal"
                android:hint="@string/price_text"
                android:ems="10"
                android:id="@+id/price"
                android:layout_weight="1" />

            <Button android:id="@+id/ring_button" style="?android:textAppearanceLarge"
                android:layout_width="match_parent" android:layout_height="0dp"
                android:layout_marginTop="16dp" android:text="@string/action_ring"
                android:textStyle="bold"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
