<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <ScrollView android:id="@+id/form1" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="25dp"
                android:hint="@string/title_what"
                android:background="#00000000"
                android:maxLines="1" android:inputType="textAutoCorrect"
                android:id="@+id/title_what" />

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/body_what" android:layout_width="match_parent"
                    android:hint="@string/body_what" android:gravity="top"
                    android:imeOptions="actionUnspecified" android:inputType="textAutoCorrect"
                    android:layout_height="200px" android:maxLines="3" android:singleLine="false"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/tag_text"
                    android:background="#00000000"
                    android:maxLines="1" android:inputType="textAutoCorrect"
                    android:id="@+id/tag_what" />

                <EditText
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/subtag_text"
                    android:background="#00000000"
                    android:maxLines="1" android:inputType="textAutoCorrect"
                    android:id="@+id/subtag_what" />
            </LinearLayout>

            <Button android:id="@+id/ring_button" style="?android:textAppearanceLarge"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_where"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
